# noughts-and-crosses

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  noughts-and-crosses-client-e1f7f2d74b80648eb1aacf2f7cb9e008577c5b80860eab0cfc3a4af3fb63065c4ab5b16e303bfbd046567adc6f61bdfb.js  wrangler.toml
.github/workflows/: publish_web.yml
client/: Cargo.toml  index.html
client/src/: board.rs  camera.rs  client.rs  game_state.rs  input.rs  main.rs  messages.rs
core/: Cargo.toml
core/src/: game_state.rs  lib.rs  messages.rs
server/: Cargo.toml
server/src/: game.rs  game_state.rs  lib.rs
